--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Repo for reroute hackathon: http://hattery.com/reroute/
 
 See the app at: http://wigglemap.com
+Follow us: http://facebook.com/wigglemap 
+  http://twitter.com/wigglemap
 
 To begin:
 1. Install dependencies (see below)
